# lox-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
docs/: plan-resolution-syntax.md  plan-struct.md  plan-type-system-foundation.md  syntax.md  todos.md
docs/adr/: 003-string-interning-with-str-id.md  006-blocks-as-expressions-implicit-return.md  007-block-scoping.md
docs/temp-generated/: code-review-2026-04-21.md  plan-struct.md  plan-type-system-foundation.md
examples/: simple.lox  test.lox
src/: ast.rs  cli.rs  dag.rs  expr.rs  expression.rs  id.rs  identifier_registry.rs  interpreter.rs  lex.rs  lib.rs  main.rs  module.rs  parse.rs  parse_error.rs  runner.rs  span.rs  string_interner.rs  string_utils.rs  symbol_names.rs  token.rs  type_index.rs  types.rs  vm.rs
src/interpret/: debug_string.rs  environment.rs  error.rs  gc.rs  heap.rs  helper_values.rs  hepler_values.rs  interpreter.rs  mod.rs  predule.rs  prelude.rs  string_interner.rs  value.rs
src/parse/: context.rs  error.rs  lex.rs  mod.rs  parse_context.rs  parser.rs
src/typecheck/: environment.rs  error.rs  mod.rs  typechecker.rs  typecheker.rs
src/vm/: compiler.rs  runner.rs
tests/: e2e.rs
tests/common/: mod.rs
tests/fixtures/: 01_scalars.lox  02_arithmetic.lox  03_boolean_logic.lox  04_comparisons.lox  05_variables_and_types.lox  06_strings.lox  07_blocks.lox  08_if_else.lox  09_while_loop.lox  10_for_loop.lox  11_when_expr.lox  12_arrays.lox  13_maps.lox  14_functions.lox  15_chaining.lox  16_json.lox  17_structs.lox  (+6 more)
tree-sitter-lox/: grammar.js  package.json  tree-sitter.json
(+42 files in other folders)
