[package]
name = "lox-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0.51" }
derive_more = { version = "0.99.17" }
phf = { version = "0.11", features = ["macros"] }
